fix: Fix login.html template syntax error
- Remove nested block structure that caused ParseError
- Simplify template structure to avoid Tornado template parsing issues
- Remove empty login_widget block override
- Fix nested block/endblock structure

--- a/jupytercluster/templates/login.html
+++ b/jupytercluster/templates/login.html
@@ -1,10 +1,7 @@
 {% extends "page.html" %}
-{% block login_widget %}
-{% endblock login_widget %}
 {% block main %}
-  {% block login %}
-    <div id="login-main" class="container">
-      {% block login_container %}
+  <div id="login-main" class="container">
+    <div class="login-container">
         {% if login_service %}
           <div class="service-login text-center">
             <p id='insecure-login-warning' class='hidden alert alert-warning'>
@@ -59,9 +56,8 @@
             </div>
           </form>
         {% endif %}
-      {% endblock login_container %}
+      </div>
     </div>
-  {% endblock login %}
 {% endblock main %}
 {% block script %}
   {{ super() }}
