--- a/jupytercluster/templates/error.html
+++ b/jupytercluster/templates/error.html
@@ -1,5 +1,5 @@
 {% extends "page.html" %}
-{% block title %}Error - JupyterCluster{% endblock %}
+{% block title %}Error - JupyterCluster{% end %}
 {% block main %}
   <div class="container">
     <div class="row">
@@ -12,5 +12,5 @@
       </div>
     </div>
   </div>
-{% endblock main %}
+{% end %}
 
