--- a/jupytercluster/templates/hub_create.html
+++ b/jupytercluster/templates/hub_create.html
@@ -1,5 +1,5 @@
 {% extends "page.html" %}
-{% block title %}Create Hub - JupyterCluster{% endblock %}
+{% block title %}Create Hub - JupyterCluster{% end %}
 {% block main %}
   <div class="container">
     <div class="row">
@@ -14,7 +14,7 @@
           <div class="alert alert-danger">{{ error }}</div>
         </div>
       </div>
-    {% endif %}
+    {% end %}
 
     <div class="row mt-4">
       <div class="col-md-8">
@@ -64,5 +64,5 @@
       </div>
     </div>
   </div>
-{% endblock main %}
+{% end %}
 
