--- a/jupytercluster/templates/page.html
+++ b/jupytercluster/templates/page.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      {%- block title -%}
-        JupyterCluster
-      {%- endblock title -%}
+      {% block title %}JupyterCluster{% end %}
     </title>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,14 +11,14 @@
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
       <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
       <link href="{{ static_url('css/style.css') }}" rel="stylesheet" type="text/css" />
-    {% endblock stylesheet %}
+    {% end %}
     {% block favicon %}
       <link rel="icon" href="{{ static_url('favicon.ico') }}" type="image/x-icon">
-    {% endblock favicon %}
+    {% end %}
     {% block scripts %}
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
       <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-    {% endblock scripts %}
+    {% end %}
   </head>
   <body>
     <noscript>
@@ -39,7 +37,7 @@
                 <strong>JupyterCluster</strong>
               </a>
             </span>
-          {% endblock logo %}
+          {% end %}
           {% if user %}
             <button class="navbar-toggler"
                     type="button"
@@ -65,9 +63,9 @@
                     <li class="nav-item">
                       <a class="nav-link" href="{{ base_url }}admin">Admin</a>
                     </li>
-                  {% endif %}
-                {% endblock nav_bar_left_items %}
-              {% endif %}
+                  {% end %}
+                {% end %}
+              {% end %}
             </ul>
             <ul class="nav navbar-nav me-2">
               {% block nav_bar_right_items %}
@@ -87,11 +85,11 @@
                            role="button"
                            class="btn btn-sm btn-outline-primary"
                            href="{{ login_url }}">Login</a>
-                      {% endif %}
+                      {% end %}
                     </span>
-                  {% endblock login_widget %}
+                  {% end %}
                 </li>
-              {% endblock nav_bar_right_items %}
+              {% end %}
             </ul>
           </div>
         </div>
@@ -100,14 +98,14 @@
     {% block announcement %}
       {% if announcement %}
         <div class="container text-center announcement alert alert-warning">{{ announcement | safe }}</div>
-      {% endif %}
-    {% endblock announcement %}
+      {% end %}
+    {% end %}
     {% block main %}
-    {% endblock main %}
+    {% end %}
     {% block footer %}
-    {% endblock footer %}
+    {% end %}
     {% block script %}
-    {% endblock script %}
+    {% end %}
   </body>
 </html>
 
