fix: Convert remaining endif to Tornado syntax in page.html

--- a/jupytercluster/templates/page.html
+++ b/jupytercluster/templates/page.html
@@ -48,7 +48,7 @@
                     aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-          {% endif %}
+          {% end %}
           <div class="collapse navbar-collapse" id="thenavbar">
             <ul class="navbar-nav me-auto mb-0">
               {% if user %}
