fix: Convert remaining endblock nav_bar to Tornado syntax

--- a/jupytercluster/templates/page.html
+++ b/jupytercluster/templates/page.html
@@ -94,7 +94,7 @@
           </div>
         </div>
       </nav>
-    {% endblock nav_bar %}
+    {% end %}
     {% block announcement %}
       {% if announcement %}
         <div class="container text-center announcement alert alert-warning">{{ announcement | safe }}</div>
