--- a/jupytercluster/templates/admin.html
+++ b/jupytercluster/templates/admin.html
@@ -65,7 +65,7 @@
                             <td>
                               {% if user.allowed_namespace_prefixes %}
                                 {% for prefix in user.allowed_namespace_prefixes %}
-                                  <code>{{ prefix }}</code>{% if not loop.last %}, {% end %}
+                                  <code>{{ prefix }}</code>{% if not (loop.index == len(user.allowed_namespace_prefixes)) %}, {% end %}
                                 {% end %}
                               {% else %}
                                 <span class="text-muted">All</span>
