fix: Replace |length filter with len() function in admin template
- Tornado templates don't support |length filter like Jinja2
- Use len() function directly: {{ len(users) }} instead of {{ users|length }}
- Fixes NameError: name 'length' is not defined

--- a/jupytercluster/templates/admin.html
+++ b/jupytercluster/templates/admin.html
@@ -19,12 +19,12 @@
         <ul class="nav nav-tabs" id="adminTabs" role="tablist">
           <li class="nav-item" role="presentation">
             <button class="nav-link active" id="users-tab" data-bs-toggle="tab" data-bs-target="#users" type="button" role="tab">
-              Users ({{ users|length }})
+              Users ({{ len(users) }})
             </button>
           </li>
           <li class="nav-item" role="presentation">
             <button class="nav-link" id="hubs-tab" data-bs-toggle="tab" data-bs-target="#hubs" type="button" role="tab">
-              All Hubs ({{ hubs|length }})
+              All Hubs ({{ len(hubs) }})
             </button>
           </li>
         </ul>
